After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 667616 - [PATCH] Universal access panel fails to compile if gsettings-desktop-schemas not installed in /usr/include
[PATCH] Universal access panel fails to compile if gsettings-desktop-schemas ...
Status: RESOLVED FIXED
Product: gnome-control-center
Classification: Core
Component: Universal Access
git master
Other Linux
: Normal normal
: ---
Assigned To: Control-Center Maintainers
Control-Center Maintainers
Depends on:
Blocks:
 
 
Reported: 2012-01-10 09:44 UTC by Robert Ancell
Modified: 2012-01-10 09:58 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Fixes include for gdesktop-enums.h (756 bytes, patch)
2012-01-10 09:44 UTC, Robert Ancell
committed Details | Review

Description Robert Ancell 2012-01-10 09:44:40 UTC
Created attachment 204930 [details] [review]
Fixes include for gdesktop-enums.h

The include name for gdesktop-enums.h is wrong and always uses the version in /usr/include instead of the one specified in the .pc file.