universal-access: Fix incorrect include path

We were using a prefixed path even though gsettings-desktop-schemas
already prefixes the include path.

https://bugzilla.gnome.org/show_bug.cgi?id=667616